# Pure-Log

./: .clangd  .gitignore  CMakeLists.txt  README.md
better log/: CMakeLists.txt
better log/header/: betterLogger.hpp  cppTools.hpp  defaultLogStacks.hpp  defaultLoggers.hpp  formats.hpp  logStacks.hpp  loggers.hpp  standardLibraries.hpp
better log/source/: defaultLogStacks.cpp  defaultLoggers.cpp  logStack.tpp  logStacks.cpp  loggers.cpp  loggers.tpp
example/: CMakeLists.txt  example.cpp  log.txt  tester.cpp
include/pureLog/: pureLog.hpp
pureLog/: CMakeLists.txt
pureLog/header/: colors.hpp  consoleOut.hpp  fileOut.hpp  formats.hpp  formatting.hpp  log.hpp  logger.hpp  outputStream.hpp  pureLog.hpp  standardLibs.hpp  stdIncludes.hpp
pureLog/source/: colors.cpp  consoleOut.cpp  fileOut.cpp  log.cpp  logger.tpp  outputStream.cpp  outputStream.tpp
